# ws21-kelo-500-motion-control

./: .gitignore  CMakeLists.txt  EthercatCommunication.c  PlatformToWheelInverseKinematicsSolver.c  README.md  abag.c
KELO_SDP/: CMakeLists.txt  EthercatCommunication.c  Makefile  PlatformToWheelInverseKinematicsSolver.c
